GreasePencil Stereo Render renders to one eye only #74811

Closed
opened 2020-03-16 13:34:37 +01:00 by Jeroen Bakker · 5 comments
Member

System Information
Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: AMD Radeon (TM) Pro WX 7100 Graphics ATI Technologies Inc. 4.5.13572 Core Profile Context FireGL 5.0.73.19.30

Blender Version
Broken: version: 2.83 (sub 9), branch: Unknown, commit date: Unknown Unknown, hash: rBUnknown
Worked: 2.82

Short description of error
When using grease pencil in a stereo rendering the grease pencil objects are only visible in the left eye. In the viewport it renders both.

Exact steps for others to reproduce the error

  1. Add grease pencil object.
  2. Enable Stereoscopy in Output Property tab.
  3. Perform a final render.
  4. Note that the object only appears in the left eye image.

gp_stereo.blend

**System Information** Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: AMD Radeon (TM) Pro WX 7100 Graphics ATI Technologies Inc. 4.5.13572 Core Profile Context FireGL 5.0.73.19.30 **Blender Version** Broken: version: 2.83 (sub 9), branch: Unknown, commit date: Unknown Unknown, hash: `rBUnknown` Worked: 2.82 **Short description of error** When using grease pencil in a stereo rendering the grease pencil objects are only visible in the left eye. In the viewport it renders both. **Exact steps for others to reproduce the error** 1. Add grease pencil object. 2. Enable Stereoscopy in Output Property tab. 3. Perform a final render. 4. Note that the object only appears in the left eye image. [gp_stereo.blend](https://archive.blender.org/developer/F8409822/gp_stereo.blend)
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

I detected this issue during #73931 (Stereoscopy shows nothing in the render window).

I detected this issue during #73931 (Stereoscopy shows nothing in the render window).

This issue was referenced by 8ba9efb7d8

This issue was referenced by 8ba9efb7d8ff399aaf3c65fd14272d0bc6f2ab39
Jeroen Bakker self-assigned this 2020-03-17 15:18:11 +01:00
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74811
No description provided.